--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+		img {
+		  border-radius: 50%;
+		}
+		</style>
 	</head>
 	<body class="landing is-preload">
 		<div id="page-wrapper">
@@ -27,7 +32,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<h2>Portafolio</h2>
-					<p>Hola, Soy Patricia Quintanilla.</p>
+					<img src="images/portada.jpg" border-radius: 50%;>
+					<p>Hola, soy Patricia Quintanilla.</p>
 					
 				</section>
 
