--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Alpha by HTML5 UP</title>
+		<title>Portafolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -59,7 +59,7 @@
 								<span class="icon solid major fa-cloud accent3"></span>
 								<h3>Contacto y Github</h3>
 								<h4>Correo Electrónico: patricia14103@gmail.com <br>
-									Url Github: <a href="https://github.com/Patricia14/ReproductoMusica"><p>https://github.com/Patricia14/ReproductoMusica</p></a>
+									Url Github: <a href="https://github.com/Patricia14"><p>https://github.com/Patricia14</p></a>
 								</h4>
 							</section>
 						</div>
