--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
 				<section id="banner">
 					<h2>Portafolio</h2>
 					<img src="images/portada.jpg" border-radius: 50%;>
-					<p>Hola, soy Patricia Quintanilla.</p>
+					<p>Patricia Quintanilla.</p>
+					Estudios realizados: <br>
+					-Técnico en ingeniería en computación. <br>
+					-Curso en línea: Programación en Java con Jsp Y MVC Con Mysql <br>
+					-Certificado Scrum Foundation.
+
 					
 				</section>
 
@@ -51,15 +56,15 @@
 							<section>
 								<span class="icon solid major fas fa-portrait accent4"></span>
 								<h3>Información personal</h3>
-								<h4>Nombre: Patricia Guadalupe <br>
-									Apellido: Quintanilla Rodríguez
-									</h4>
+								<h4>Nombre: Patricia Guadalupe
+									</h4> 
+								<h4>Apellido: Quintanilla Rodríguez </h4>	
 							</section>
 							<section>
 								<span class="icon solid major fa-cloud accent3"></span>
 								<h3>Contacto y Github</h3>
-								<h4>Correo Electrónico: patricia14103@gmail.com <br>
-									Url Github: <a href="https://github.com/Patricia14"><p>https://github.com/Patricia14</p></a>
+								<h4>Correo Electrónico: patricia14103@gmail.com <br></h4>
+								<h4>	Url Github: <a href="https://github.com/Patricia14"><p>https://github.com/Patricia14</p></a>
 								</h4>
 							</section>
 						</div>
@@ -72,6 +77,19 @@
 				</section>
 				<br>
 					<div class="row">
+						<div class="col-6 col-12-narrower">
+
+							<section class="box special">
+								<span class="image featured"><img src="images/free/portada.png" alt="" /></span>
+								<h3>Página Landing page creada para la agencia ARKT</h3>
+								<p> Página destinada a agencia ARKT, una empresa salvadoreña especializada en el marcketing y diseño digital. 
+								</p>
+								<ul class="actions special">
+									<li><a href="free.html" class="button alt">Learn More</a></li>
+								</ul>
+							</section>
+
+						</div>
 
 						<div class="col-6 col-12-narrower">
 
@@ -126,19 +144,7 @@
 							</section>
 
 						</div>
-						<div class="col-6 col-12-narrower">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/free/portada.png" alt="" /></span>
-								<h3>Página Landing page creada para la agencia ARKT</h3>
-								<p> Página destinada a agencia ARKT, una empresa salvadoreña especializada en el marcketing y diseño digital. 
-								</p>
-								<ul class="actions special">
-									<li><a href="free.html" class="button alt">Learn More</a></li>
-								</ul>
-							</section>
-
-						</div>
+						
 					</div>
 
 				</section>
